--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,8 +17,8 @@ jobs:
 
       - name: Clone Repo
         run: |
-            export LATEST_APP=$(wget -qO- https://api.github.com/repos/username/chat-api/tags | gawk -F '["v]' '/name/{print "v"$5;exit}')
-            git clone -b $LATEST_APP https://github.com/username/chat-api
+            export LATEST_APP=$(wget -qO- https://api.github.com/repos/ai365vip/chat-api/tags | gawk -F '["v]' '/name/{print "v"$5;exit}')
+            git clone -b $LATEST_APP https://github.com/ai365vip/chat-api
 
       - name: Build Frontend (admin)
         env:
@@ -48,6 +48,7 @@ jobs:
             wget https://dl.google.com/go/go1.23.4.freebsd-amd64.tar.gz && tar -C /usr/local -xzf go1.23.4.freebsd-amd64.tar.gz && rm go1.23.4.freebsd-amd64.tar.gz
             ln -s /usr/local/go/bin/go /usr/local/bin/go
           run: |
+            # 确保安全目录设置正确，需要与您的用户名和仓库名一致
             git config --global --add safe.directory /home/runner/work/chat-api-freebsd/chat-api-freebsd/chat-api
             cd chat-api
             go mod download
@@ -63,7 +64,7 @@ jobs:
       - name: Generate release tag
         id: tag
         run: |
-          echo "release_tag=$(wget -qO- https://api.github.com/repos/username/chat-api/tags | gawk -F '["v]' '/name/{print "v"$5;exit}')" >> $GITHUB_OUTPUT
+          echo "release_tag=$(wget -qO- https://api.github.com/repos/ai365vip/chat-api/tags | gawk -F '["v]' '/name/{print "v"$5;exit}')" >> $GITHUB_OUTPUT
 
       - name: Create release
         uses: softprops/action-gh-release@v1
